<resources>
    <string name="app_name">AskMentor</string>
    <string name="question">Qual é a sua dúvida?</string>
    <string name="perguntar">PERGUNTAR</string>
    <string name="configuracoes">Configurações</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="name">Nome</string>
    <string name="login">E-mail</string>
    <string name="code">Código de Confirmação</string>
    <string name="password">Senha</string>
    <string name="repeat_password">Repetir Senha</string>
    <string name="forgot_password">Esqueci a Senha</string>
    <string name="register">CADASTRAR</string>
    <string name="confirmRegister">CONFIRMAR</string>
    <string name="login_btn">ENTRAR</string>
    <string name="register_btn">NÃO TENHO CONTA</string>
    <string name="facebook_app_id">1254593851357640</string>
    <string name="fb_login_protocol_scheme">fb1254593851357640</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="send_question">Enviar</string>
    <string name="take_picture">Tire uma foto</string>
    <string name="menu_questions">Minhas Perguntas</string>
    <string name="menu_answers">Minhas Respostas</string>
    <string name="menu_available_questions">Perguntas Disponíveis</string>
    <string name="menu_account">Minha Conta</string>
    <string name="menu_home">Início</string>
    <string name="menu_exit">Desconectar</string>
    <string name="change_avatar">Mudar Foto de Perfil</string>
    <string name="save">Salvar</string>
    <string name="message">Mensagem</string>
</resources>
