<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/baseline_arrow_forward_24"
            android:title="@string/menu_questions" />
        <item
            android:id="@+id/nav_answers"
            android:icon="@drawable/baseline_arrow_back_24"
            android:title="@string/menu_answers" />
        <item
            android:id="@+id/nav_available_questions"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/menu_available_questions" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/baseline_exit_to_app_24"
            android:title="@string/menu_exit" />
    </group>

</menu>
